[package]
name = "connection-profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.45"
postgres = "0.19.4"
structopt = "0.3.26"
postgres-openssl = "0.5.0"

[patch.crates-io]
tokio-postgres = { path = "rust-postgres/tokio-postgres"}
